feat(config): implement production URL